# word2quiz-app

./: __init__.py  base.mo  canvas_robot.py  macos_messagebox.py  main.py  main_warning.py  msgcat.py  pyproject.toml  sample_progress_thread.py  widgets.py
data/: tkhtmlview-0.1.0.post1-py3-none-any.whl  version1.docx  version2.docx  ~$rsion2.docx
databases/: storage.sqlite
locales/: base.pot
locales/en/LC_MESSAGES/: base.mo  base.po
locales/nl/LC_MESSAGES/: base.mo  base.po
msgs/: nl.msg
