[tool.poetry]
name = "word2quiz-app"
version = "0.6.0"
description = ""
authors = ["Nico de Groot <ndegroot0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.4.4"
word2quiz = "*"
customtkinter = "^4.3.0"
tkhtmlview = "^0.1.0"
tkinter-tooltip = "^2.1.0"
markdown = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
